[project]
name = "rvrt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "addict>=2.4.0",
    "einops>=0.8.1",
    "future>=1.0.0",
    "ninja>=1.11.1.4",
    "numpy>=2.0.2",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "scikit-image>=0.24.0",
    "scipy>=1.13.1",
    "timm>=1.0.15",
    "torch>=1.9.1",
    "torchvision>=0.22.0",
]
